--- a/core_packages/v_chat_sdk_core/pubspec.yaml
+++ b/core_packages/v_chat_sdk_core/pubspec.yaml
@@ -1,23 +1,24 @@
 name: v_chat_sdk_core
 description: core package for v chat sdk witch use socket.io with node js and mongodb db
-version: 1.2.1
+version: 1.3.0
 homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/core_packages/v_chat_sdk_core
 
 environment:
-  sdk: '>=2.17.0 <4.0.0'
+  sdk: '>=3.0.2 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  platform_local_notifications: ^1.0.0
   intl: ^0.18.0
   http: ^1.1.0
   logging: ^1.2.0
-  chopper: ^7.0.3
+  chopper: ^7.0.8
   http_parser: ^4.0.2
-  encrypt: ^5.0.1
+  encrypt: 5.0.1
   crypto: ^3.0.3
   socket_io_client: ^2.0.3+1
   latlong2: ^0.9.0
@@ -25,21 +26,22 @@ dependencies:
   sqflite: ^2.3.0
   sqflite_common_ffi: ^2.3.0+2
   objectid: ^3.0.0
-  sqlite3_flutter_libs: ^0.5.15
+  sqlite3_flutter_libs: ^0.5.17
   diacritic: ^0.1.4
   flutter_fgbg: ^0.3.0
   flutter_cache_manager: ^3.3.1
-  platform_local_notifications: ^0.0.4
   path_provider: ^2.1.0
   google_api_availability: ^5.0.0
-  shared_preferences: ^2.2.0
+  shared_preferences: ^2.2.2
   device_info_plus: ^9.0.3
   event_bus_plus: ^0.6.1
   uuid: ^3.0.7
   collection: ^1.17.1
   v_platform: ^1.2.1
-  timeago: ^3.4.0
+  timeago: ^3.5.0
   flutter_parsed_text: ^2.2.1
+  enum_to_string: ^2.0.1
+
 dev_dependencies:
   lint: ^2.1.2
   build_runner: ^2.4.6
