--- a/core_packages/v_chat_sdk_sample/pubspec.yaml
+++ b/core_packages/v_chat_sdk_sample/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   shared_preferences: ^2.2.0
   http: ^1.1.0
   bottom_navy_bar: ^6.0.0
-  url_launcher: ^6.1.12
+  url_launcher: ^6.0.12
   firebase_messaging: ^14.6.5
   custom_navigation_bar: ^0.8.2
   introduction_screen: ^3.1.8
@@ -19,24 +19,22 @@ dependencies:
   get: 4.6.5
   flutter: 
     sdk: flutter
-  v_chat_sdk_core: ^1.2.1
-  v_chat_web_rtc: ^1.2.1
-  v_chat_receive_share: ^1.2.1
+  v_chat_sdk_core: ^1.3.0
+  v_chat_receive_share: ^1.3.0
   v_chat_message_page: ^1.2.2
-  v_chat_firebase_fcm: ^1.2.1
-  v_chat_room_page: ^1.2.1
-  v_chat_input_ui: ^1.2.2
+  v_chat_firebase_fcm: ^1.3.0
+  v_chat_room_page: ^1.3.0
+  v_chat_input_ui: ^1.3.0
   animated_login: ^1.7.0
   shimmer: ^3.0.0
   fluttertoast: ^8.2.2
   path: ^1.8.3
-  encrypt: ^5.0.1
-  csslib: 0.17.0
+  encrypt: 5.0.1
   http_parser: ^4.0.2
   textless: ^6.6.6
   flutter_localizations:
     sdk: flutter
-  v_chat_one_signal: ^1.2.1
+  v_chat_one_signal: ^1.3.0
   v_platform: ^1.2.1
 dev_dependencies:
   flutter_test: 
