--- a/v_ui_packages/v_chat_room_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_room_page/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_room_page
 description: v chat rooms page ui package this package is part of v chat sdk and cant be used alone.
-version: 1.2.1
+version: 1.3.0
 homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_ui_packages/v_chat_web_rtc
@@ -12,20 +12,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_sdk_core: ^1.2.1
-  cached_network_image: ^3.2.3
+  v_chat_sdk_core: ^1.3.0
+  cached_network_image: ^3.3.0
   flutter_advanced_avatar: ^1.5.0
-  map_launcher: ^2.5.0+1
+  map_launcher: ^3.0.1
   flutter_cache_manager: ^3.3.1
   loadmore: ^2.1.0
   meta: ^1.9.1
-  badges: ^3.1.1
+  badges: ^3.1.2
   v_platform: ^1.2.1
-  timeago: ^3.4.0
+  timeago: ^3.5.0
   textless: ^6.6.6
   collection: ^1.17.1
   intl: ^0.18.0
-  adaptive_dialog: ^1.9.0-no-macos.2
+  adaptive_dialog: ^2.0.0
 
 dev_dependencies:
 
