--- a/core_packages/v_chat_sdk_core/pubspec.yaml
+++ b/core_packages/v_chat_sdk_core/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_sdk_core
 description: core package for v chat sdk witch use socket.io with node js and mongodb db
-version: 1.4.0
+version: 1.4.1
 homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/core_packages/v_chat_sdk_core
@@ -13,41 +13,41 @@ dependencies:
   flutter:
     sdk: flutter
   platform_local_notifications: ^1.0.0
-  intl: ^0.18.0
-  http: ^1.1.0
+  intl: ^0.19.0
+  http: ^1.2.1
   logging: ^1.2.0
-  chopper: ^7.0.8
+  chopper: ^8.0.0
   http_parser: ^4.0.2
   encrypt: 5.0.1
   crypto: ^3.0.3
   socket_io_client: ^2.0.3+1
-  latlong2: ^0.9.0
+  latlong2: ^0.9.1
   path: ^1.8.3
-  sqflite: ^2.3.0
-  sqflite_common_ffi: ^2.3.0+2
+  sqflite: ^2.3.3+1
+  sqflite_common_ffi: ^2.3.3
   objectid: ^3.0.0
-  sqlite3_flutter_libs: ^0.5.17
-  diacritic: ^0.1.4
+  sqlite3_flutter_libs: ^0.5.22
+  diacritic: ^0.1.5
   flutter_fgbg: ^0.3.0
-  flutter_cache_manager: ^3.3.1
-  path_provider: ^2.1.0
+  flutter_cache_manager: ^3.3.2
+  path_provider: ^2.1.3
   google_api_availability: ^5.0.0
-  shared_preferences: ^2.2.2
-  device_info_plus: ^9.0.3
+  shared_preferences: ^2.2.3
+  device_info_plus: ^10.1.0
   event_bus_plus: ^0.6.1
-  uuid: ^3.0.7
-  collection: ^1.17.1
-  v_platform: ^1.2.3
-  timeago: ^3.5.0
+  uuid: ^4.4.0
+  collection: ^1.18.0
+  v_platform: ^2.0.0
+  timeago: ^3.6.1
   flutter_parsed_text: ^2.2.1
   enum_to_string: ^2.0.1
 
 dev_dependencies:
-  lint: ^2.1.2
-  build_runner: ^2.4.6
-  chopper_generator: ^7.0.1
-  lints: ^2.1.1
-  flutter_lints: ^2.0.2
+  lint: ^2.3.0
+  build_runner: ^2.4.10
+  chopper_generator: ^8.0.0
+  lints: ^4.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
 
