--- a/core_packages/v_chat_sdk_sample/android/gradle.properties
+++ b/core_packages/v_chat_sdk_sample/android/gradle.properties
@@ -1,4 +1,3 @@
-#org.gradle.caching=true
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
