--- a/core_packages/v_chat_sdk_sample/pubspec.yaml
+++ b/core_packages/v_chat_sdk_sample/pubspec.yaml
@@ -6,36 +6,38 @@ environment:
   sdk: '>=2.17.0 <4.0.0'
 
 dependencies:
-  cupertino_icons: ^1.0.5
-  shared_preferences: ^2.2.0
-  http: ^1.1.0
+  cupertino_icons: ^1.0.8
+  shared_preferences: ^2.2.3
+  http: ^1.2.1
   bottom_navy_bar: ^6.0.0
-  url_launcher: ^6.0.12
-  firebase_messaging: ^14.6.5
+  url_launcher: ^6.2.6
+  firebase_messaging: ^14.9.4
   custom_navigation_bar: ^0.8.2
   introduction_screen: ^3.1.8
   flex_color_scheme: ^7.1.2
-  intl: ^0.18.0
-  get: 4.6.5
+  intl: ^0.19.0
+  get: ^4.6.6
   flutter: 
     sdk: flutter
   v_chat_sdk_core: ^1.4.0
-  v_chat_receive_share: ^1.3.0
-  v_chat_message_page: ^1.2.2
-  v_chat_firebase_fcm: ^1.3.0
-  v_chat_room_page: ^1.3.0
-  v_chat_input_ui: ^1.3.0
+  v_chat_receive_share: ^1.4.0
+  v_chat_message_page: ^1.4.0
+  v_chat_firebase_fcm: ^1.4.0
+  v_chat_room_page: ^1.4.0
+  v_chat_input_ui: ^2.0.0+1
   animated_login: ^1.7.0
   shimmer: ^3.0.0
-  fluttertoast: ^8.2.2
+  fluttertoast: ^8.2.5
   path: ^1.8.3
   encrypt: 5.0.1
   http_parser: ^4.0.2
-  textless: ^6.6.6
+  textless:
+    git:
+      url: https://github.com/hatemragab/textless.git
+      ref: main # You can specify the branch, tag, or commit here
   flutter_localizations:
     sdk: flutter
-  v_chat_one_signal: ^1.3.0
-  v_platform: ^1.2.3
+  v_platform: ^2.0.0
 dev_dependencies:
   flutter_test: 
     sdk: flutter
