--- a/v_ui_packages/v_chat_message_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_message_page/pubspec.yaml
@@ -13,41 +13,41 @@ dependencies:
   flutter:
     sdk: flutter
   v_chat_sdk_core: ^1.4.0
-  v_chat_input_ui: ^1.3.0
-  v_chat_voice_player: ^1.2.1
-  v_chat_media_editor: ^1.3.0
-  file_saver: ^0.2.8
-  map_launcher: ^3.0.1
+  v_chat_input_ui: ^2.0.0+3
+  v_chat_voice_player: ^2.0.0+1
+  v_chat_media_editor: ^2.0.0
+  file_saver: ^0.2.13
+  map_launcher: ^3.3.0
   scroll_to_index: ^3.0.1
   flutter_parsed_text: ^2.2.1
-  open_filex: ^4.3.4
-  share_plus: ^7.2.1
-  flutter_cache_manager: ^3.3.1
-  meta: ^1.9.1
-  flutter_dropzone: ^3.0.6
+  open_filex: ^4.4.0
+  share_plus: ^9.0.0
+  flutter_cache_manager: ^3.3.2
+  meta: ^1.12.0
+  flutter_dropzone: ^4.0.0
   flutter_link_previewer: ^3.2.2
-  v_platform: ^1.2.3
+  v_platform: ^2.0.0
   pasteboard: ^0.2.0
-  universal_html: ^2.2.1
-  textless: ^6.6.6
-  adaptive_dialog: ^2.0.0
-  cached_network_image: ^3.3.0
-  url_launcher: ^6.1.14
+  universal_html: ^2.2.4
+  adaptive_dialog: ^2.1.0
+  cached_network_image: ^3.3.1
+  url_launcher: ^6.2.6
   flutter_advanced_avatar: ^1.5.0
-  timeago: ^3.5.0
-  intl: ^0.18.0
-  collection: ^1.17.1
+  timeago: ^3.6.1
+  intl: ^0.19.0
+  collection: ^1.18.0
   phosphor_flutter: ^1.4.0
-  http: ^1.1.0
-  uuid: ^3.0.7
-  path_provider: ^2.1.0
-  photo_view: ^0.14.0
-  chewie: ^1.7.1
-  video_player: ^2.7.2
-  shared_preferences: ^2.2.2
+  http: ^1.2.1
+  uuid: ^4.4.0
+  path_provider: ^2.1.3
+  photo_view: ^0.15.0
+  chewie: ^1.8.1
+  video_player: ^2.8.6
+  shared_preferences: ^2.2.3
+  agora_rtc_engine: ^5.3.1
 dev_dependencies:
-  flutter_lints: ^2.0.2
-  lints: ^2.1.1
+  flutter_lints: ^4.0.0
+  lints: ^4.0.0
 
 
 flutter:
