--- a/v_ui_packages/v_chat_message_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_message_page/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_message_page
 description: v chat sdk message page ui package this package is part of v chat sdk and cant be used alone
-version: 2.0.0
+version: 2.0.0+1
 homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_ui_packages/v_chat_message_page
@@ -13,7 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   v_chat_sdk_core: ^2.0.0
-  v_chat_input_ui: ^2.0.0+3
+  v_chat_input_ui: ^2.0.0+4
   v_chat_voice_player: ^2.0.0+1
   v_chat_media_editor: ^2.0.0
   file_saver: ^0.2.13
